--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt("com.github.bumptech.glide:compiler:4.11.0")
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.8'
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
