just package renaming and migrate from gson to moshi |bye bye gson :( welcome moshi :) |

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name="com.kylix.submissionbfaa3.ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name="com.kylix.submissionbfaa3.ui.activities.MainActivity" />
 
         <receiver
         android:name=".utils.ReminderUser"
