--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
 
     //View Binding Delegate
     implementation 'com.github.yogacp:android-viewbinding:1.0.3'
+
+    //UI
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
