--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,11 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
